[package]
name = "libp2p_bug_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
clap = { version = "4.3.10" , features = ["derive"] }
futures = "0.3.21"
libp2p = { version = "0.53.2", features = ["noise", "quic", "tokio", "yamux", "request-response"] }
tokio = { version = "1.18.2", features = ["full", "sync"] }
